[gd_scene load_steps=8 format=3 uid="uid://ccoc1g3exg6dd"]

[ext_resource type="Script" path="res://main/trains/train_segment.gd" id="1_iuxb2"]
[ext_resource type="Texture2D" uid="uid://dl0yhioklbqdo" path="res://main/trains/train_caboose_solid.png" id="2_kx2u5"]
[ext_resource type="Texture2D" uid="uid://yawqjy5bi1lf" path="res://main/trains/train_caboose_uncoloured.png" id="3_p886b"]
[ext_resource type="Texture2D" uid="uid://yk8l8h7tejev" path="res://main/trains/train_fuel_solid.png" id="4_xs8l2"]
[ext_resource type="Texture2D" uid="uid://7y6aq8mvynie" path="res://main/trains/train_fuel_uncoloured.png" id="5_xyiah"]
[ext_resource type="Texture2D" uid="uid://d1kkma5qdg8fh" path="res://main/trains/train_carriage_solid.png" id="6_041rh"]
[ext_resource type="Texture2D" uid="uid://ibpctjgx0xj8" path="res://main/trains/train_carriage_uncoloured.png" id="7_kf5ko"]

[node name="train_segment" type="Node2D"]
script = ExtResource("1_iuxb2")

[node name="caboose_spritesheet_solid" type="Sprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
texture = ExtResource("2_kx2u5")
centered = false
hframes = 12
frame = 1

[node name="caboose_spritesheet_uncoloured" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.725268, 0.111298, 3.85046e-07, 1)
position = Vector2(-16, -16)
texture = ExtResource("3_p886b")
centered = false
hframes = 12
frame = 1

[node name="fuel_spritesheet_solid" type="Sprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
texture = ExtResource("4_xs8l2")
centered = false
hframes = 12
frame = 1

[node name="fuel_spritesheet_uncoloured" type="Sprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
texture = ExtResource("5_xyiah")
centered = false
hframes = 12
frame = 1

[node name="carriage_spritesheet_solid" type="Sprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
texture = ExtResource("6_041rh")
centered = false
hframes = 12
frame = 1

[node name="carriage_spritesheet_uncoloured" type="Sprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
texture = ExtResource("7_kf5ko")
centered = false
hframes = 12
frame = 1
